# ImGuiEditor

./: CMakeLists.txt
Classes/: AppDelegate.cpp  EditorRoot_generated.h  MainScene.cpp  MainScene.h  ModelLoader.cpp  ModelLoader.h
Classes/ImGUI/: IMGUIGLViewImpl.cpp  ImGuiLayer.cpp
Resources/res/: house.c3t
proj.ios_mac/ClionCocos.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: Info.plist
proj.ios_mac/mac/: Info.plist
